# GOTHook

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/noip/muminoi/myappnative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ELFFile.cpp  ELFFile.h  ProcUtil.cpp  ProcUtil.h  Utils.cpp  Utils.h  elf_utils.c  main.cpp  native-lib.cpp  ptrace.c  utils.c
app/src/main/cpp/include/: elf_utils.h
app/src/main/java/me/noip/muminoi/myappnative/: MainActivity.java
app/src/main/java/sg/vantagepoint/uncrackable2/: CodeCheck.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/noip/muminoi/myappnative/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
